# grpc

./: .dockerignore  .env  .env.custom  .env.exp1  .env.exp2  .env.exp3  .gitignore  CMakeLists.txt  Makefile  README.md  Session.vim  benchmark.dockerfile  custom.env  docker-compose-swarm-async.yml  docker-compose-swarm-sync.yml  docker-compose-sync.yml  docker-compose.yml  execute-cloudlab.sh  grpc.dockerfile  launcher.sh  profile.py  setup-nodes.sh
.undodir/: %home%saheru%Desktop%EPFL%3_-_Advanced_multiprocessor_architecture%proj%grpc%Makefile  %home%saheru%Desktop%EPFL%3_-_Advanced_multiprocessor_architecture%proj%grpc%benchmark.dockerfile  %home%saheru%Desktop%EPFL%3_-_Advanced_multiprocessor_architecture%proj%grpc%grpc.dockerfile
client/: CMakeLists.txt  asyncClient.cc  asyncClient.h  asyncClient2.cc  asyncClient2.h  client.cc  client.h  clientAsync.cc  clientAsync.h  greeter_async_client.cc  greeter_async_client2.cc
client/old/: client.cc
container_files/cluster/default/: clientAsync.csv  messageServiceAsync.csv  mockDatabaseAsync.csv  sanitServiceAsync.csv
container_files/delay_5000_proc_4_2/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
container_files/delay_500_proc_4_2/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
container_files/delay_50_proc_4_2/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
cpp/helloworld/: CMakeLists.txt  greeter_async_client2.cc  greeter_async_server.cc  middleService.cc
data_analysis/: batch_experiments.py  experiments.csv  plot_utils.py  plots.ipynb  possible_experiments.csv  setup_experiments.py
helloworld/: CMakeLists.txt  backend.cc
messageService/: CMakeLists.txt  asyncClient.cc  asyncClient.h  asyncFindLastMessageHandler.cc  asyncFindLastMessageHandler.h  asyncSanitizeMessageHandler.h  asyncSendMessageHandler.cc  asyncSendMessageHandler.h  messageService.cc  messageService.h  messageServiceAsync.cc  messageServiceAsync.h
messageService/sync/: messageService.cc  messageService.cpp  messageService.h
mockDatabase/: CMakeLists.txt  asyncFindLastMessageHandler.h  asyncHandler.h  asyncRequestHandler.h  asyncSaveMessageHandler.h  mockDatabase.cc  mockDatabase.h  mockDatabaseAsync.cc  mockDatabaseAsync.h  mockDatabaseSync.cc  mockDatabaseSync.h
mockDatabase/old/: CMakeLists.txt  asyncFindLastMessageHandler.h  mockDatabaseAsync.h
mockDatabase/sync/: mockDatabase.cc  mockDatabase.h
old/: CMakeLists.txt  greeter_server.cc
protos/: mock_message_board.proto
results/high_congestion/: .env.custom
results/high_congestion/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/high_congestion_2/: .env.custom
results/high_congestion_2/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/high_congestion_no_network_delay/: .env.custom
results/high_congestion_no_network_delay/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/low_congestion/: .env.custom
results/low_congestion/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/low_congestion_2/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/low_congestion_low_db_delay/: .env.custom
results/low_congestion_low_db_delay/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/medium_congestion_low_db_delay/: .env.custom
results/medium_congestion_low_db_delay/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/medium_congestion_no_network_delay/: .env.custom
results/medium_congestion_no_network_delay/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/medium_high_congestion/: .env.custom
results/medium_high_congestion/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/medium_high_congestion_2/: .env.custom
results/medium_high_congestion_2/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  mockDatabaseSync.csv  sanitServiceAsync.csv  sanitServiceSync.csv
results/report/high_contention/: .env.custom
results/report/high_contention/default/: clientAsync.csv  clientSync.csv  messageServiceAsync.csv  messageServiceSync.csv  mockDatabaseAsync.csv  (+3 more)
results/report/low_contention/: .env.custom
results/report/medium_contention/: .env.custom
sanitizationService/: CMakeLists.txt  asyncSanitizeMessageHandler.cc  asyncSanitizeMessageHandler.h  sanitizationServiceAsync.cc  sanitizationServiceAsync.h
sanitizationService/sync/: sanitizationService.cc  sanitizationService.h
shared/: HashMap.h  HashNode.h  ServerStats2.cpp  ServerStats2.h  Utils.cc  Utils.h  consts.h
shared/old/: ServerStats.cpp  ServerStats.h
(+16 files in other folders)
